# dbt-autodoc

./: .gitignore  README.md  pyproject.toml
dbt_autodoc/: cli.py  utils.py
tests/: test_core.py
tests/data/: manifest_1.json
